--- a/papers/Theory/bib.bib
+++ b/papers/Theory/bib.bib
@@ -24,4 +24,16 @@ isbn = {9783893367344},
 mendeley-groups = {PhD},
 title = {{Wannier Functions and Construction of Model Hamiltonians}}
 }
- 
+
+@article{Blount1962,
+author = {Blount, E. I.},
+doi = {10.1016/S0081-1947(08)60459-2},
+file = {:home/ponet/Documents/Mendeley Desktop/S0081-1947(08)60459-2.pdf:pdf},
+issn = {00811947},
+journal = {Solid State Phys. - Adv. Res. Appl.},
+number = {C},
+pages = {305--373},
+title = {{Formalisms of Band Theory}},
+volume = {13},
+year = {1962}
+}
